k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ahmad-blog
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
