k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ahmad-blog
  labels:
    app.kubernetes.io/name: ahmad-blog
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ahmad-blog
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9100
      targetPort: metrics
